# FastSMRW

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  README.md  build.bat  download-deps.bat  installer.iss
.github/workflows/: build.yml
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  fastsm_jni.cpp
android/gradle/: libs.versions.toml
apple/shared/: AppState.swift  CoreClient.swift  CoreEvents.swift  Movement.swift
assets/keymaps/: Windows10.keymap  Windows8.1.keymap
core/src/: version.cpp
docs/: changelog.txt
examples/python/: smoke.py
ios/: build.sh  exportOptions.plist  project.yml  testflight.sh
ios/src/: AddAccountViewController.swift  AppDelegate.swift  ComposeViewController.swift  DetailScreens.swift  ErrorAlert.swift  Info.plist  MainViewController.swift  ManagerScreens.swift  MediaScreens.swift  RootViewController.swift  SceneDelegate.swift  SettingsViewController.swift  Speech.swift  SpeechFieldsViewController.swift
macos/: build-core.sh  build.sh  fetch-deps.sh  package-dmg.sh  project.yml  smoke_core.cpp
macos/src/: AddAccountWindowController.swift  AliasWindows.swift  AppDelegate.swift  AppState.swift  ClientFilterWindowController.swift  ComposeWindowController.swift  CoreEvents.swift  DetailDialogs.swift  ErrorAlert.swift  FastSMRW-Bridging-Header.h  HashtagsAndListsWindows.swift  Info.plist  MainMenu.swift  MainWindowController.swift  MediaWindows.swift  MentionPickerWindowController.swift  MovementUnitsWindowController.swift  NavigableTableView.swift  NewTimelineWindowController.swift  ServerFiltersWindows.swift  SettingsWindowController.swift  Speech.swift  SpeechDetailsWindowController.swift  TimelineViewController.swift  TimelinesViewController.swift  UserAnalysisWindowController.swift  main.swift
tests/: check.hpp  main.cpp  test_auth.cpp  test_bluesky_map.cpp  test_bluesky_richtext.cpp  test_capi.cpp  test_filters.cpp  test_keymap.cpp  test_mastodon_map.cpp  test_models.cpp  test_presentation.cpp  test_speech.cpp  test_sse.cpp  test_store.cpp  test_thread.cpp  test_timeline_refresh.cpp  test_update.cpp  test_util.cpp
windows/resources/: app.manifest  app.rc  resource.h
windows/src/: account_settings_dialog.cpp  account_settings_dialog.hpp  add_account_dialog.cpp  add_account_dialog.hpp  aliases_dialog.cpp  aliases_dialog.hpp  app_controller.cpp  app_controller.hpp  app_messages.hpp  client_filters_dialog.cpp  client_filters_dialog.hpp  compose_dialog.cpp  compose_dialog.hpp  edit_profile_dialog.cpp  edit_profile_dialog.hpp  edit_util.hpp  hashtag_dialog.cpp  hashtag_dialog.hpp  invisible_hotkeys.cpp  invisible_hotkeys.hpp  invisible_keyhook.cpp  invisible_keyhook.hpp  keymap_manager_dialog.cpp  keymap_manager_dialog.hpp  list_membership_dialog.cpp  list_membership_dialog.hpp  lists_manager_dialog.cpp  lists_manager_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  media_player_window.cpp  media_player_window.hpp  new_timeline_dialog.cpp  new_timeline_dialog.hpp  post_info_dialog.cpp  (+15 more)
(+129 files in other folders)
